<resources>
<<<<<<< HEAD
    <string name="app_name">Time Management</string>
    <string name="action_settings">Refresh</string>
=======
    <string name="app_name">Time Managerment</string>
    <string name="action_settings">Settings</string>
>>>>>>> b642cffb34a4db2a8810d702f8bbb77eda4c8f6f
    <string name="action_sign_up">Sign Up</string>
    <string name="action_logout">LogOut</string>
    <string name="action_today">Today</string>
    <string name="action_day_view">Day</string>
    <string name="action_three_day_view">3 day</string>
    <string name="action_week_view">Week</string>
    <string name="action_month_view">Month</string>
<<<<<<< HEAD
    <string name="action_compute">Advise</string>
=======
>>>>>>> b642cffb34a4db2a8810d702f8bbb77eda4c8f6f
    <string name="prompt_username">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_re_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid. Must be 4 -12 character, no regex, and no space</string>
    <string name="error_invalid_password">This password is invalid. Must be 5 -16 character, and no space.</string>
    <string name="error_invalid_rePassword">This password is not matched</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="correct_login_toast">Login Successful</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing username
    completions."</string>

<<<<<<< HEAD


    <!-- Edit event properties -->
    <string name="title">Title</string>
    <string name="all_Day">All-Day</string>
    <string name="course">Course</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="text_day">Days</string>
    <string name="text_priority">Priorities</string>
    <string name="done_date">Done</string>
    <string name="hint_note">Note</string>
=======
    <!-- Edit event properties -->
    <string name="title">Title</string>
    <string name="from">From</string>
    <string name="to">To</string>
>>>>>>> b642cffb34a4db2a8810d702f8bbb77eda4c8f6f
    <string name="event_title_hint">Title</string>
    <string name="event_location_hint">Location</string>
    <string name="start_date">##############</string>
    <string name="end_date">##############</string>
    <string name="start_time">########</string>
    <string name="end_time">########</string>
<<<<<<< HEAD
    <string name="done_time">None</string>
=======
>>>>>>> b642cffb34a4db2a8810d702f8bbb77eda4c8f6f
    <string name="spinner_repeat_title">Repeat</string>
    <string name="reset_button">Reset</string>
    <string name="cancel_button">Cancel</string>
    <string name="menu_new_event">Add Event</string>
<<<<<<< HEAD
    <string name="add_reminder">Add Reminder</string>
    <string name="color">Choose Color</string>
    <string name="delete">Delete</string>

    <string name="compute_hint">What time would you like to study?</string>
    <string name="compute_button">Compute</string>
=======
>>>>>>> b642cffb34a4db2a8810d702f8bbb77eda4c8f6f


    <!-- fragment Menu List -->
    <string name="fragment_save">Save</string>
    <string name="fragment_delete">Delete</string>
    <string name="fragment_cancel">Cancel</string>
    <string name="fragment_edit">Edit</string>
    <string name="show_subtitle">#####</string>
</resources>
