<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.springroll.database.SigninActivity.SignInActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="match_parent"
        android:gravity="center_horizontal" android:layout_centerVertical="true"
        android:orientation="vertical"
        android:background="@color/main_background"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <AutoCompleteTextView android:id="@+id/username" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_username"
            android:inputType="textEmailAddress" android:maxLines="1"
            android:singleLine="true" android:paddingTop="25dp"/>

        <EditText android:id="@+id/password" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified" android:inputType="textPassword"
            android:maxLines="1" android:singleLine="true" />

        <EditText android:id="@+id/re_password" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_re_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified" android:inputType="textPassword"
            android:maxLines="1" android:singleLine="true" />

        <Button android:id="@+id/user_sign_up_button"
            android:layout_marginTop="16dp" android:text="@string/action_sign_up"
            android:layout_width="240dp" android:layout_height="35dp"
            android:textStyle="bold" android:background="@color/button"/>

        <TextView android:id="@+id/register_error_message"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:imeOptions="actionUnspecified" android:layout_marginTop="30dp"
            android:maxLines="1" android:singleLine="true" android:textSize="18dp"
            android:lines="3" android:layout_gravity="center"
            android:textColor="@color/error" android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>