<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_background"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/event_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:hint="@string/event_title_hint"
                android:padding="10dp" />
            <!--android:background="@drawable/shape_textbox"-->


            <EditText
                android:id="@+id/event_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:hint="@string/event_location_hint"
                android:padding="10dp" />
            <!--android:background="@drawable/shape_textbox" -->

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="#c0c0c0" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewAllDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:padding="10dp"
                    android:text="@string/all_Day"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:checked="false" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:padding="10dp"
                    android:text="@string/course"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/courseBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewFrom"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="5dp"
                    android:padding="10dp"
                    android:text="@string/from"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/start_date_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/textViewFrom"
                    android:text="@string/start_date"
                    android:textSize="17sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/textViewTo"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="5dp"
                    android:padding="10dp"
                    android:text="@string/to"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/end_date_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/textViewTo"
                    android:text="@string/start_date"
                    android:textSize="17sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/textViewRepeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="5dp"
                    android:padding="10dp"
                    android:text="@string/text_day"
                    android:textSize="20sp"
                    />

                <CheckBox
                    android:id="@+id/mon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textViewRepeat"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/textViewRepeat"
                    android:text="M"
                    android:textSize="12sp"
                    />

                <CheckBox
                    android:id="@+id/tue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textViewRepeat"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/mon"
                    android:text="T"
                    android:textSize="12sp"
                    />

                <CheckBox
                    android:id="@+id/wed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textViewRepeat"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/tue"
                    android:text="W"
                    android:textSize="12sp"
                    />

                <CheckBox
                    android:id="@+id/thu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textViewRepeat"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/wed"
                    android:text="R"
                    android:textSize="12sp"
                    />

                <CheckBox
                    android:id="@+id/fri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textViewRepeat"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/thu"
                    android:text="F"
                    android:textSize="12sp"
                    />

                <CheckBox
                    android:id="@+id/sat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textViewRepeat"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/fri"
                    android:text="S"
                    android:textSize="12sp"
                    />

                <CheckBox
                    android:id="@+id/sun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textViewRepeat"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/sat"
                    android:text="Su"
                    android:textSize="12sp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/done_date_view"
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPriority"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="5dp"
                    android:padding="10dp"
                    android:text="@string/done_date"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/done_date_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/textViewPriority"
                    android:text="@string/done_time"
                    android:textSize="17sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/prioritystr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="5dp"
                    android:padding="10dp"
                    android:text="@string/text_priority"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioGroop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/prioritystr"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/radio0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" />

                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1" />

                    <RadioButton
                        android:id="@+id/radio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2" />

                    <RadioButton
                        android:id="@+id/radio3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3" />

                    <RadioButton
                        android:id="@+id/radio4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4" />

                    <RadioButton
                        android:id="@+id/radio5"
                        android:layout_width="53dp"
                        android:layout_height="wrap_content"
                        android:text="5" />

                </RadioGroup>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@color/nav_drawer_no_user_background">

                <EditText
                    android:id="@+id/notescroll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="start"
                    android:background="@color/nav_drawer_background"
                    android:enabled="true"
                    android:focusable="true"
                    android:hint="@string/hint_note"
                    android:inputType="textMultiLine"
                    android:isScrollContainer="true"
                    android:maxLines="4"
                    android:minLines="4"
                    android:padding="10dp" />

            </RelativeLayout>


            <Button
                android:id="@+id/addReminder"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:paddingTop="10dp"
                android:text="@string/add_reminder" />

            <Button
                android:id="@+id/colorSelect"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/color"/>

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/error"
                android:text="@string/delete" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>






