<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.springroll.database.SigninActivity.SignInActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/main_background"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <!-- Login progress -->
            <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" android:visibility="gone" />

            <AutoCompleteTextView android:id="@+id/username" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_username"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" android:paddingTop="25dp" />

            <EditText android:id="@+id/password" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <ImageButton android:id="@+id/user_sign_in_button"
                android:layout_width="240dp" android:layout_height="40dp"
                android:src="@drawable/selector_button_login"
                android:layout_margin="5dp"/>

            <TextView android:id="@+id/login_error_message"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:layout_marginTop="30dp"
                android:maxLines="1" android:singleLine="true" android:textSize="18sp"
                android:padding="15dp" android:lines="3" android:layout_gravity="center"
                android:textColor="@color/error" android:textStyle="bold" />

            <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="89dp"
                android:maxLines="1" android:singleLine="true"
                android:padding="15dp" android:lines="3" android:layout_gravity="center"
                android:text="No Account Yet? Sign Up!"/>

            <Button android:id="@+id/user_sign_up_button"
                android:layout_width="240dp" android:layout_height="35dp"
                android:text="@string/action_sign_up" android:textStyle="bold"
                android:background="@color/button"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

